<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_season"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/selectTextview"
        android:textStyle="bold"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/selectTextview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/radioGroupId"
        >

        <RadioButton
            android:id="@+id/radioSpring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spring"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <RadioButton
            android:id="@+id/radioWinter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winter"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <RadioButton
            android:id="@+id/radioSummer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summer"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <RadioButton
            android:id="@+id/radioAutumn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autumn"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />



    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_below="@+id/radioGroupId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/light_gray"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="22sp"
        />

</RelativeLayout>