<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="UselessParent"
        android:id="@+id/pffmId"
        >

       <ImageView
           android:layout_width="35dp"
           android:layout_height="35dp"
           android:src="@drawable/previous"
           android:layout_marginStart="20dp"
           android:layout_marginTop="15dp"
           android:contentDescription="@string/previous"
           android:id="@+id/backtoPfId"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ps"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="19sp"
            />



    </FrameLayout>


    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/users"
        android:layout_below="@+id/pffmId"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/ps"
        android:id="@+id/userProfileId"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pffmId"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:text="@string/username"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:id="@+id/usernameId"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mm"
        android:layout_marginTop="220dp"
        android:layout_marginStart="20dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/em"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="310dp"
        android:id="@+id/emial"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ea"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/emial"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:id="@+id/emailAddressId"
        />






</RelativeLayout>