<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepFour">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/pyt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="23sp"
        android:id="@+id/plantripId"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plantripId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="#046057"
        android:id="@+id/cardviewId"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_4of4"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/seekbarId"
            />

    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardviewId"
        android:text="@string/your_personal_information"
        android:layout_centerHorizontal="true"
        android:textColor="@color/dark_green"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:id="@+id/plantextId"
        />


    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/users"
        android:layout_below="@+id/plantextId"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/userPhoto"
        android:contentDescription="@string/username"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/userPhoto"
        android:text="@string/username"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:id="@+id/userNameShow"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameShow"
        android:text="@string/save"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:text="@string/sub"
        android:textAllCaps="false"
        android:backgroundTint="#16AC9E"
        android:textColor="@color/white"
        android:id="@+id/submitTOClassId"
        android:layout_marginStart="270dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="600dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:backgroundTint="@color/Orange"
        android:textColor="@color/black"
        android:id="@+id/BackToId"
        />



</RelativeLayout>